# sentimentAnalysisWebServer

./: CMakeLists.txt  README.md  c.Dockerfile  cmpt383.md  dataProcessing.cpp  docker-compose.yml  main.cpp  server.cpp  test.cpp
python/: bayesModel.py  correctModel.py  main.py  preprocess.py
web/: index.html
